--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,3 +3,15 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   margin: 0px;
 }
+
+.content {
+  display: flex;
+  flex-direction: row;
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+}
