--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,9 @@
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   margin: 0px;
+  background-color: #171c28;
+  color: #afafbf;
 }
 
 .content {
