--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -1,17 +1,22 @@
 .intro {
   display: flex;
   flex-direction: column;
-  padding: 5px 100px;
+  padding: 50px 100px;
+  width: 800px;
+  max-width: 100%;
+  font-size: max(1.8vw + 1rem, 3vw);
 }
 
 h1 {
   font-size: max(2vw + 1rem, 3vw);
 }
 
-.intro_para {
-  width: 800px;
-  max-width: 100%;
-  font-size: max(1.8vw + 1rem, 3vw);
+.div {
+  margin-bottom: 1rem;
+}
+
+.iam {
+  font-size: 1rem;
 }
 
 span {
