--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,9 +1,7 @@
 .navbar {
-  background: #293144;
-  width: 10vw;
-  height: 100vh;
+  display: flex;
   margin: 0;
-  padding: 0;
+  padding-left: 100px;
   color: #afafbf;
 }
 
@@ -14,9 +12,7 @@ ul {
 }
 
 li {
-  display: block;
-  height: 50px;
-  border-bottom: 1px solid #afafbf;
+  display: inline-block;
   padding: 1vw;
 }
 
@@ -31,10 +27,7 @@ a {
     height: 10vh;
   }
   ul {
-    flex-direction: row;
-    align-content: center;
   }
   li {
-    display: inline;
   }
 }
