--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,3 +1,17 @@
 .about {
-  padding: 5px 100px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 100px;
+  padding-right: 300px;
+  font-size: max(1vw + 1rem, 2vw);
+}
+
+.skills {
+  font-size: max(1rem, 1.5vw);
+}
+
+@media only screen and (max-width: 600px) {
+  .about {
+    padding: 50px 30px;
+  }
 }
