--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,5 +1,5 @@
 .project {
-  padding-top: 5px;
+  padding-top: 30px;
   padding-bottom: 5px;
   padding-left: 100px;
   padding-right: 300px;
@@ -31,7 +31,7 @@
 
 @media screen and (max-width: 600px) {
   .project {
-    padding: 0rem;
+    padding: 30px 0rem;
   }
   .card {
     padding: 1rem;
